--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: resume builder
 on:
   push:
     branches:
-      - master
+      - main
   schedule:
     - cron: '0 0 * * 0' # on every sunday 
 
@@ -53,4 +53,4 @@ jobs:
         uses: mikeal/publish-to-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH_NAME: 'master'
+          BRANCH_NAME: 'main'
