--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,9 @@ jobs:
           key: ${{ runner.os }}-setup
 
       - name: Run setup.sh
-        run: bash setup.sh
+        run: |
+          chmod +x setup.sh
+          bash setup.sh
 
       - name: Build
         run: python main.py
