--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Run setup.sh
         run: |
           chmod +x setup.sh
-          bash setup.sh
+          sudo bash setup.sh
 
       - name: Build
         run: python main.py
