--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,8 +60,8 @@ jobs:
       - name: Run setup.sh
         run: |
           pwd
-          chmod +x setup.sh
-          sudo bash setup.sh
+          chmod +x ./setup.sh
+          sudo bash ./setup.sh
 
       - name: list texlive binaries
         run: which pdflatex
