--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,10 +59,8 @@ jobs:
 
       - name: Run setup.sh
         run: |
-          pwd
-          ls
-          chmod +x ./setup.sh
-          sudo bash ./setup.sh
+          chmod +x ${pwd}/setup.sh
+          sudo bash ${pwd}/setup.sh
 
       - name: list texlive binaries
         run: which pdflatex
