--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,8 +45,8 @@ jobs:
 
       - name: Run setup.sh
         run: |
-          chmod +x ${pwd}/setup.sh
-          sudo bash ${pwd}/setup.sh
+          chmod +x ./setup.sh
+          sudo bash ./setup.sh
 
       # install texlive for creating pdf 
       - name: Setup TeX Live
