--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,14 +16,13 @@ jobs:
         python-version: [3.9]
 
     steps:
-      # - name: Checkout repository
-      #   uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
       # - name: Set up Python ${{ matrix.python-version }}
       #   uses: actions/setup-python@v2
       #   with:
       #     python-version: ${{ matrix.python-version }}
-
       # - name: Cache python dependencies
       #   uses: actions/cache@v2
       #   with:
@@ -31,7 +30,6 @@ jobs:
       #     key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
       #     restore-keys: |
       #       ${{ runner.os }}-pip-
-
       # - name: Install python dependencies
       #   run: |
       #     python -m pip install --upgrade pip
