--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,28 +19,27 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      # - name: Set up Python ${{ matrix.python-version }}
-      #   uses: actions/setup-python@v2
-      #   with:
-      #     python-version: ${{ matrix.python-version }}
-      # - name: Cache python dependencies
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: ~/.cache/pip
-      #     key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-pip-
-      # - name: Install python dependencies
-      #   run: |
-      #     python -m pip install --upgrade pip
-      #     pip install -r requirements.txt
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Cache python dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+      - name: Install python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Cache setup.sh
         uses: actions/cache@v2
         with:
           path: ./setup.sh
           key: ${{ runner.os }}-setup
-
       - name: Run setup.sh
         run: |
           chmod +x ./setup.sh
@@ -61,8 +60,10 @@ jobs:
 
       #####
 
-      - name: list texlive binaries
-        run: which pdflatex
+      - name: check texlive binaries
+        run: |
+          which pdflatex
+          pdflatex --version
 
       # running main script
 
