--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
         uses: teatimeguest/setup-texlive-action@v2
         with:
           version: 2023
-          packages: pdftexcmds hyperref
+          packages: pdftexcmds hyperref pdflatex
 
 
       ##### for testing only
