--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,11 +33,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Cache setup.sh
-        uses: actions/cache@v2
-        with:
-          path: ./setup.sh
-          key: ${{ runner.os }}-setup
+      # - name: Cache setup.sh
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: ./setup.sh
+      #     key: ${{ runner.os }}-setup
       - name: Run setup.sh
         run: |
           chmod +x ./setup.sh
