--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Cache texlive installer
+        uses: actions/cache@v2
+        with:
+          path: ./install-texlive
+          key: ${{ runner.os }}-install-texlive
+      - name: Run texlive installer
+        run: |
+          chmod +x ./install-texlive
+          sudo bash ./install-texlive --scheme=medium
+          
       - name: Cache setup
         uses: actions/cache@v2
         with:
@@ -40,12 +50,17 @@ jobs:
           key: ${{ runner.os }}-setup
       - name: Run setup
         run: |
-          chmod +x ./install-texlive
-          sudo bash ./install-texlive --scheme=medium
-          
           chmod +x ./setup.sh
           sudo bash ./setup.sh
 
+          
+      - name: check texlive binaries
+        run: |
+          which pdflatex
+          pdflatex --version
+      
+      - name: Check `tlmgr` version
+        run: tlmgr --version
       # install texlive for creating pdf 
       # - name: Setup TeX Live
       #   uses: teatimeguest/setup-texlive-action@v2
