--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,11 +81,11 @@ jobs:
 
       # running main script
 
-      - name: Build
-        run: python app.py
+      # - name: Build
+      #   run: python app.py
 
-      - name: Push new resumes
-        uses: mikeal/publish-to-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH_NAME: 'main'
+      # - name: Push new resumes
+      #   uses: mikeal/publish-to-github-action@master
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     BRANCH_NAME: 'main'
