--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,8 @@ jobs:
       #   run: tlmgr --version
       
       - name: listting texlive binaries
-        run: ls -l ~/texlive/2023/bin/x86_64-linux
+        run: ls -l /root
+        # /texlive/2023/bin/x86_64-linux
 
       # install texlive for creating pdf 
       # - name: Setup TeX Live
