--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,13 +54,13 @@ jobs:
       #     sudo bash ./setup.sh
 
           
-      # - name: check texlive binaries
-      #   run: |
-      #     which pdflatex
-      #     pdflatex --version
+      - name: check texlive binaries
+        run: |
+          which pdflatex
+          pdflatex --version
       
-      # - name: Check `tlmgr` version
-      #   run: tlmgr --version
+      - name: Check `tlmgr` version
+        run: tlmgr --version
       
       - name: listting texlive binaries
         run: sudo ls -l /root/texlive/2023/bin/x86_64-linux
