--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
-# resume creator 
-beautifulsoup4
-pylatex
-lxml
-python-dotenv
-
-# server
-flask
-flask-cors
-pytest
+beautifulsoup4==4.12.2
+blinker==1.6.2
+click==8.1.6
+exceptiongroup==1.1.2
+Flask==2.3.2
+Flask-Cors==4.0.0
+gunicorn==21.2.0
+iniconfig==2.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+lxml==4.9.3
+MarkupSafe==2.1.3
+ordered-set==4.1.0
+packaging==23.1
+pluggy==1.2.0
+PyLaTeX==1.4.1
+pytest==7.4.0
+python-dotenv==1.0.0
+soupsieve==2.4.1
+tomli==2.0.1
+Werkzeug==2.3.6
