--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,11 @@ lxml==4.9.3
 MarkupSafe==2.1.3
 ordered-set==4.1.0
 packaging==23.1
+Pillow==10.0.1
 pluggy==1.2.0
 PyLaTeX==1.4.1
+PyMuPDF==1.23.3
+PyMuPDFb==1.23.3
 pytest==7.4.0
 python-dotenv==1.0.0
 soupsieve==2.4.1
