--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pluggy==1.2.0
 PyLaTeX==1.4.1
 PyMuPDF==1.23.3
 PyMuPDFb==1.23.3
+PyPDF2==3.0.1
 pytest==7.4.0
 python-dotenv==1.0.0
 soupsieve==2.4.1
