--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,58 @@
+aniso8601==9.0.1
+annotated-types==0.6.0
 beautifulsoup4==4.12.2
 blinker==1.6.2
+blis==0.7.11
+catalogue==2.0.10
+certifi==2023.11.17
+charset-normalizer==3.3.2
 click==8.1.6
+cloudpathlib==0.16.0
+confection==0.1.4
+cymem==2.0.8
 exceptiongroup==1.1.2
 Flask==2.3.2
 Flask-Cors==4.0.0
+Flask-RESTful==0.3.10
+flask-swagger-ui==4.11.1
 gunicorn==21.2.0
+idna==3.6
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+langcodes==3.3.0
 lxml==4.9.3
 MarkupSafe==2.1.3
+murmurhash==1.0.10
+numpy==1.26.2
 ordered-set==4.1.0
 packaging==23.1
 Pillow==10.0.1
 pluggy==1.2.0
+preshed==3.0.9
+pydantic==2.5.2
+pydantic_core==2.14.5
 PyLaTeX==1.4.1
 PyMuPDF==1.23.3
 PyMuPDFb==1.23.3
 PyPDF2==3.0.1
 pytest==7.4.0
 python-dotenv==1.0.0
+pytz==2023.3.post1
+requests==2.31.0
+six==1.16.0
+smart-open==6.4.0
 soupsieve==2.4.1
+spacy==3.7.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
+thinc==8.2.1
 tomli==2.0.1
+tqdm==4.66.1
+typer==0.9.0
+typing_extensions==4.8.0
+urllib3==2.1.0
+wasabi==1.1.2
+weasel==0.3.4
 Werkzeug==2.3.6
